Reduce contestion over oblidge-child routines in group layers

We shouldn't ask for projection() in group layers too often.

BUG:438384